syntax = "proto3";
package xpla.zeroreward.v1beta1;

option go_package = "github.com/xpladev/xpla/x/zeroreward/types";

import "gogoproto/gogo.proto";

// ZeroRewardValidator required for validator set update logic.
message ZeroRewardValidator {
    option (gogoproto.equal)           = false;
    option (gogoproto.goproto_getters) = false;
  
    // address is the address of the validator.
    string address = 1;

    // power defines the power of the validator.
    int64 power = 2;

    // used when unregistering, reserved for delete
    bool is_deleting = 3;
}